== chore: modifiled tsconfigs

--- a/packages/backend/common/tsconfig.json
+++ b/packages/backend/common/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "dist",
     "tsBuildInfoFile": "dist/.tsbuildinfo",
     "moduleResolution": "bundler",
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
