--- a/packages/tools/ts-config/src/tsconfig.base.json
+++ b/packages/tools/ts-config/src/tsconfig.base.json
@@ -58,6 +58,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
 
     // Note: To transform paths for both the output .js and .d.ts files, you need both of the below entries
     "plugins": [
