--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   "devDependencies": {
     "@types/node": "^22.0.0",
     "npm-run-all": "^4.1.5",
+    "tsup": "^8.3.5",
     "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
