--- a/packages/backend/common/package.json
+++ b/packages/backend/common/package.json
@@ -74,6 +74,7 @@
     "@types/yargs-parser": "^21",
     "npm-run-all": "^4.1.5",
     "ts-patch": "^3.2.1",
+    "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   }
 }
