--- a/packages/frontend/react/tsconfig.json
+++ b/packages/frontend/react/tsconfig.json
@@ -16,7 +16,11 @@
       "@assets/*": [
         "../../../assets/*"
       ]
-    }
+    },
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": ["src"],
   "references": [
